# emotion-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
api/: main.py  schemas.py
models/: emotion_model.py
src/: detector.py  emotion_analyzer.py  logger.py  utils.py
