[project]
name = "emotions-dectector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hsemotion>=0.3.0",
    "mediapipe>=0.10.35",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "timm==0.9.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
