[project]
name = "emotions-dectector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "hsemotion>=0.3.0",
    "mediapipe>=0.10.35",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.27",
    "timm==0.9.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.46.0",
]
